Solución de 2019/1/MAT1203/7

--- a/2019/1/MAT1203/7/solucion.tex
+++ b/2019/1/MAT1203/7/solucion.tex
@@ -145,7 +145,7 @@
 \item Sea $P$ el paralelepípedo con un vertice en el origen y vertices adyacentes en $(1,4,0)$, $(-2,-5,2)$, $(-1,2,-1)$
 \begin{enumerate}[a)]
 \item Determinar el volumen de $P$.
-\item Se define $T: \R^3 \ra \R^3$ como la transformación lineal definida por $$T(x,y,z)=(x+y,y+zx-z)$$
+\item Se define $T: \R^3 \ra \R^3$ como la transformación lineal definida por $$T(x,y,z)=(x+y,y+z,x-z)$$
 		Calcule el volumen de $T(P)$.
 \end{enumerate}
 \begin{solucion}
