Enunciado de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -113,5 +113,6 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
 \end{preguntas}
 \end{document}
