Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -113,5 +113,9 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
