--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -113,6 +113,10 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $f(x) = ln(x^2+3^x)$. Determine $f'(0) + f''(0)$.
+\begin{solucion}
+
+\end{solucion}
 \item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
 \begin{solucion}
 
