Enunciado de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -115,5 +115,6 @@
 \begin{preguntas}
 \item Sea $f(x) = ln(x^2+3^x)$. Determine $f'(0) + f''(0)$.
 \item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
+\item Si $a$ y $b$ son números positivos, encuentre el máximo de la función $f(x) = x^a(1-x)^b$ en el intervalo $[0,1]$.
 \end{preguntas}
 \end{document}
