Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -121,5 +121,9 @@
 \begin{solucion}
 
 \end{solucion}
+\item Si $a$ y $b$ son números positivos, encuentre el máximo de la función $f(x) = x^a(1-x)^b$ en el intervalo $[0,1]$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
