--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -116,5 +116,6 @@
 \item Sea $f(x) = ln(x^2+3^x)$. Determine $f'(0) + f''(0)$.
 \item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
 \item Si $a$ y $b$ son números positivos, encuentre el máximo de la función $f(x) = x^a(1-x)^b$ en el intervalo $[0,1]$.
+\item Determine el máximo y mínimo absoluto de la función $f(x) = 2\cos (x) + \sin (2x)$ en el intervalo $[0, 2\pi]$.
 \end{preguntas}
 \end{document}
