Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -125,5 +125,9 @@
 \begin{solucion}
 
 \end{solucion}
+\item Determine el máximo y mínimo absoluto de la función $f(x) = 2\cos (x) + \sin (2x)$ en el intervalo $[0, 2\pi]$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
