Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -129,5 +129,9 @@
 \begin{solucion}
 
 \end{solucion}
+\item Sea $f$ una función derivable en un intervalo $(a,b)$ tal que $f'(x) = 1+(f(x))^2$ para todo $x \in (a,b)$. Demuestre que $f$ es invertible y determine $(f^{-1})'(x)$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
