Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -133,5 +133,9 @@
 \begin{solucion}
 
 \end{solucion}
+\item Determine las asíntotas de la función $f(x) = xe^{1/x}$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
