Enunciado de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -119,5 +119,10 @@
 \item Determine el máximo y mínimo absoluto de la función $f(x) = 2\cos (x) + \sin (2x)$ en el intervalo $[0, 2\pi]$.
 \item Sea $f$ una función derivable en un intervalo $(a,b)$ tal que $f'(x) = 1+(f(x))^2$ para todo $x \in (a,b)$. Demuestre que $f$ es invertible y determine $(f^{-1})'(x)$.
 \item Determine las asíntotas de la función $f(x) = xe^{1/x}$.
+\item La ley de los gases para un gas ideal a la temperatura absoluta $T$ (en Kelvin) y la presión $P$ (en atmósferas) con un volumen $V$ (en litros) es
+$$PV = nRT$$
+donde $n$ es constante y corresponde al número de moles del gas y $R = 0,0821$ es la constante de los gases.\\
+Suponga que en el instante $t_0$ la presión $P$ es igual a 8 $atm$ y que esta aumenta a razón de 0,1 $atm/min$. Además se sabe que en ese mismo instante el volumen $V$ es de 10 litros y que este disminuye a razón de 0,15 $lt/min$.\\
+Determine la razón de cambio de $T$, con respecto al tiempoo, en el instante $t_0$, sabiendo que la constante $n = 10\ mol$.
 \end{preguntas}
 \end{document}
