--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -115,8 +115,12 @@
 \begin{preguntas}
 \item Sea $f(x) = ln(x^2+3^x)$. Determine $f'(0) + f''(0)$.
 \item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
-\item Si $a$ y $b$ son números positivos, encuentre el máximo de la función $f(x) = x^a(1-x)^b$ en el intervalo $[0,1]$.
-\item Determine el máximo y mínimo absoluto de la función $f(x) = 2\cos (x) + \sin (2x)$ en el intervalo $[0, 2\pi]$.
+\item Si $a$ y $b$ son números positivos, encuentre el máximo de la función 
+$$f(x) = x^a(1-x)^b$$
+en el intervalo $[0,1]$.
+\item Determine el máximo y mínimo absoluto de la función 
+$$f(x) = 2\cos (x) + \sin (2x)$$
+en el intervalo $[0, 2\pi]$.
 \item Sea $f$ una función derivable en un intervalo $(a,b)$ tal que $f'(x) = 1+(f(x))^2$ para todo $x \in (a,b)$. Demuestre que $f$ es invertible y determine $(f^{-1})'(x)$.
 \item Determine las asíntotas de la función $f(x) = xe^{1/x}$.
 \item La ley de los gases para un gas ideal a la temperatura absoluta $T$ (en Kelvin) y la presión $P$ (en atmósferas) con un volumen $V$ (en litros) es
