Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -121,11 +121,15 @@
 \begin{solucion}
 
 \end{solucion}
-\item Si $a$ y $b$ son números positivos, encuentre el máximo de la función $f(x) = x^a(1-x)^b$ en el intervalo $[0,1]$.
+\item Si $a$ y $b$ son números positivos, encuentre el máximo de la función 
+$$f(x) = x^a(1-x)^b$$
+en el intervalo $[0,1]$.
 \begin{solucion}
 
 \end{solucion}
-\item Determine el máximo y mínimo absoluto de la función $f(x) = 2\cos (x) + \sin (2x)$ en el intervalo $[0, 2\pi]$.
+\item Determine el máximo y mínimo absoluto de la función 
+$$f(x) = 2\cos (x) + \sin (2x)$$
+en el intervalo $[0, 2\pi]$.
 \begin{solucion}
 
 \end{solucion}
