--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -121,6 +121,10 @@
 \begin{solucion}
 
 \end{solucion}
+\item Sea $f$ una función derivable en un intervalo $(a,b)$ tal que $f'(x) = 1+(f(x))^2$ para todo $x \in (a,b)$. Demuestre que $f$ es invertible y determine $(f^{-1})'(x)$.
+\begin{solucion}
+
+\end{solucion}
 \item Si $a$ y $b$ son números positivos, encuentre el máximo de la función 
 $$f(x) = x^a(1-x)^b$$
 en el intervalo $[0,1]$.
@@ -133,7 +137,7 @@ en el intervalo $[0, 2\pi]$.
 \begin{solucion}
 
 \end{solucion}
-\item Sea $f$ una función derivable en un intervalo $(a,b)$ tal que $f'(x) = 1+(f(x))^2$ para todo $x \in (a,b)$. Demuestre que $f$ es invertible y determine $(f^{-1})'(x)$.
+\item Demuestre que la ecuación $\sin (x) = 2x-1$ tiene exáctamente una raíz real.
 \begin{solucion}
 
 \end{solucion}
