Enunciado de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -114,7 +114,7 @@
 
 \begin{preguntas}
 \item Sea $f(x) = ln(x^2+3^x)$. Determine $f'(0) + f''(0)$.
-\item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
+\item Determine todos los puntos de la curva $x^2y + e^y = e$ cuya tangente es horizontal.
 \item Sea $f$ una función derivable en un intervalo $(a,b)$ tal que $f'(x) = 1+(f(x))^2$ para todo $x \in (a,b)$. Demuestre que $f$ es invertible y determine $(f^{-1})'(x)$.
 \item Si $a$ y $b$ son números positivos, encuentre el máximo de la función 
 $$f(x) = x^a(1-x)^b$$
