Solución de 2019/1/MAT1610/8

--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -117,7 +117,7 @@
 \begin{solucion}
 
 \end{solucion}
-\item Determine todos los puntos de la curva $x^2y + e^y$ cuya tangente es horizontal.
+\item Determine todos los puntos de la curva $x^2y + e^y = e$ cuya tangente es horizontal.
 \begin{solucion}
 
 \end{solucion}
