Enunciado de 2019/1/MAT1610/6

--- a/2019/1/MAT1610/6/enunciado.tex
+++ b/2019/1/MAT1610/6/enunciado.tex
@@ -126,7 +126,7 @@ $$f(x) = x^3-3kx^2+12x$$
 \item Probar que la ecuación $1+2x+3x^2+4x^3=0$ tiene solución única.
 \item Sea $f$ una función derivable en $[0, \infty)$, tal que $\forall x \in [0, \infty)(f(2x)=2f(x))$.\\
 Demuestre que
-$$\forall x \in (0, \infty) \exists c > 0 \left(f'(x) = \dfrac{f(x)}{x}\right)$$
+$$\forall x \in (0, \infty) \exists c > 0 \left(f'(c) = \dfrac{f(x)}{x}\right)$$
 \item Si $f$ es una función dos veces derivable en $[a,b]$ tal que $f(a)=f(b)=0$ y $f(c) > 0$ con $a < c < b$, demuestre que
 $$\exists \alpha \in (a,b) (f''(\alpha) < 0)$$
 \end{preguntas}
