--- a/2019/1/MAT1610/6/solucion.tex
+++ b/2019/1/MAT1610/6/solucion.tex
@@ -121,8 +121,38 @@
 \begin{solucion}
 
 \begin{enumerate}[a)]
-\item 
-\item 
+\item $f(x) = x^4 - 8x^2 + 3$\\
+\\
+En primer lugar, buscamos los puntos críticos, esto es
+$$f'(x) = 4x^3 - 16x = 0$$
+$$4x(x^2 - 4) = 0$$
+$$4x(x+2)(x-2) = 0$$
+$$x = -2, \qquad x = 0, \qquad x = 2$$
+Luego, obtenemos la segunda derivada,
+$$f''(x) = 12x^2 - 16$$
+Y evaluamos en los puntos críticos para clasificarlos
+$$f''(-2) = 48 - 16 > 0 \ra \text{mínimo local}$$
+$$f''(0) = -16 < 0 \ra \text{máximo local}$$
+$$f''(2) = 48 - 16 > 0 \ra \text{mínimo local}$$
+Finalmente, evaluamos estos puntos en la función original para obtener los máximos y mínimos locales
+$$f(-2) = -13 \ra \text{mínimo local}$$
+$$f(0) = 3 \ra \text{máximo local}$$
+$$f(2) = -13 \ra \text{mínimo local}$$
+\item $f(x)=x+ln(x^2-1)$\\
+\\
+En primer lugar, notemos que el dominio de $f$ corresponde a 
+$$x^2-1 > 0 \ra x \in (-\infty, -1) \cup (1, \infty)$$
+Luego, derivamos para encontrar los puntos críticos,
+$$f'(x) = 1 + \dfrac{2x}{x^2-1} = \dfrac{x^2 +2x -1}{x^2-1} = 0$$
+Utilizando la formula de la ecuación de segundo grado,
+$$x = -1 + \sqrt[]{2}, \qquad x = -1 - \sqrt[]{2}$$
+Sin embargo, notemos que $-1 < -1 + \sqrt[]{2} < 1$, por lo que no es un punto crítico, dado que no esta en el dominio de la función.
+
+Ahora, derivamos nuevamente para clasíficar nuestro punto crítico,
+$$f''(x) = 
+\dfrac{2(x^2-1) - 4x^2}{(x^2-1)^2} = 
+\dfrac{-2 - 2x^2}{(x^2-1)^2} < 0$$
+$f''(x)$ es negativa para todo $x$, por lo que $x = -1 - \sqrt[]{2}$ es un máximo local.
 \end{enumerate}
 \end{solucion}
 \item Encuentre los máximos y mínimos globales de la función
@@ -190,12 +220,12 @@ $$\blacksquare$$
 \end{solucion}
 \item Sea $f$ una función derivable en $[0, \infty)$, tal que $\forall x \in [0, \infty)(f(2x)=2f(x))$.\\
 Demuestre que
-$$\forall x \in (0, \infty) \exists c > 0 \left(f'(x) = \dfrac{f(x)}{x}\right)$$
+$$\forall x \in (0, \infty) \exists c > 0 \left(f'(c) = \dfrac{f(x)}{x}\right)$$
 \begin{solucion}
 La función $f$ es derivable en el intervalo $[x, 2x]$ para $x \geq 0$. Luego, por TVM,
 $$\exists c \in (x,2x) \text{ tal que } f'(c) = \dfrac{f(2x)-f(x)}{2x-x} = \dfrac{2f(x)-f(x)}{x} = \dfrac{f(x)}{x}$$
 Por lo tanto,
-$$\forall x \in (0, \infty) \exists c > 0 \left(f'(x) = \dfrac{f(x)}{x}\right)$$
+$$\forall x \in (0, \infty) \exists c > 0 \left(f'(c) = \dfrac{f(x)}{x}\right)$$
 \end{solucion}
 \item Si $f$ es una función dos veces derivable en $[a,b]$ tal que $f(a)=f(b)=0$ y $f(c) > 0$ con $a < c < b$, demuestre que
 $$\exists \alpha \in (a,b) (f''(\alpha) < 0)$$
