--- a/2019/1/MAT1610/8/solucion.tex
+++ b/2019/1/MAT1610/8/solucion.tex
@@ -129,13 +129,13 @@ $$f'(0) + f''(0) = \ln(3) + 2$$
 \item Determine todos los puntos de la curva $x^2y^2 + e^{3y} = e$ cuya tangente es horizontal.
 \begin{solucion}
 Derivando implícitamente, tenemos que
-$$2xy^2 + 2x^2yy' + 2e^{2y}y' = 0$$
+$$2xy^2 + 2x^2yy' + 3e^{3y}y' = 0$$
 Despejando,
-$$2x^2yy' + 2e^{2y}y' = -2xy^2$$
-$$y'(2x^2y + 2e^{2y}) = -2xy$$
-$$y' = \dfrac{-xy}{x^2y + e^{2y}}$$
+$$2x^2yy' + 3e^{3y}y' = -2xy^2$$
+$$y'(2x^2y + 3e^{3y}) = -2xy^2$$
+$$y' = \dfrac{-2xy^2}{2x^2y + 3e^{3y}}$$
 Luego, los puntos donde la tangente es horizontal corresponden a
-$$y'= 0 \ra \dfrac{-xy}{x^2y + e^{2y}} = 0 \ra -xy = 0 \ra x = 0 \vee y = 0$$
+$$y'= 0 \ra \dfrac{-2xy^2}{2x^2y + 3e^{2y}} = 0 \ra -2xy^2 = 0 \ra x = 0 \vee y = 0$$
 Sin embargo, notemos que al reemplazar $y=0$ en la ecuación de la curva, obtenemos
 $$1 = e$$
 Por lo que no existe ningún punto en la curva donde $y=0$.\\
