--- a/2019/1/MAT1610/7/solucion.tex
+++ b/2019/1/MAT1610/7/solucion.tex
@@ -132,7 +132,7 @@ Notemos que al evaluar, este límite es de la forma $\dfrac{0}{0}$, por lo que p
 Notemos que al evaluar este último, seguimos obteniendo $\dfrac{0}{0}$, por lo que debemos aplicar L'Hopital nuevamente,
 {\scriptsize$$\lim\limits_{x\ra 0}\dfrac{2(\arcsin x)}{3\ \sqrt[]{1-x^2}\sin(3x)}
 \stackrel{L'H}{=} \lim\limits_{x\ra 0}\dfrac{(2(\arcsin x))'}{(3\ \sqrt[]{1-x^2}\sin(3x))'}
-=\lim\limits_{x\ra 0}\dfrac{\dfrac{2}{\sqrt[]{1-x^2}}}{3\dfrac{1}{2\ \sqrt[]{1-x^2}}\cdot(-2x)\sin(3x) + 3\ \sqrt[]{1-x^2}\cos(3x)} $$}\\
+=\lim\limits_{x\ra 0}\dfrac{\dfrac{2}{\sqrt[]{1-x^2}}}{3\dfrac{1}{2\ \sqrt[]{1-x^2}}\cdot(-2x)\sin(3x) + 3\ \sqrt[]{1-x^2}\cos(3x)3} $$}\\
 Evaluando esto, tenemos que
 $$\lim\limits_{x\ra 0}\dfrac{(\arcsin x)^2}{1-cos(3x)} = \dfrac{2}{9}$$
 \item $\lim\limits_{x\ra 0} x^{\frac{1}{\ln (e^x-1)}}$\\
