--- a/2019/1/MAT1610/8.5/solucion.tex
+++ b/2019/1/MAT1610/8.5/solucion.tex
@@ -284,13 +284,13 @@ $$
 \item Determine todos los puntos de la curva $x^2y^2 + e^{3y} = e$ cuya tangente es horizontal.
 \begin{solucion}
 Derivando implícitamente, tenemos que
-$$2xy^2 + 2x^2yy' + 2e^{2y}y' = 0$$
+$$2xy^2 + 2x^2yy' + 3e^{3y}y' = 0$$
 Despejando,
-$$2x^2yy' + 2e^{2y}y' = -2xy^2$$
-$$y'(2x^2y + 2e^{2y}) = -2xy$$
-$$y' = \dfrac{-xy}{x^2y + e^{2y}}$$
+$$2x^2yy' + 3e^{3y}y' = -2xy^2$$
+$$y'(2x^2y + 3e^{3y}) = -2xy^2$$
+$$y' = \dfrac{-2xy^2}{2x^2y + 3e^{3y}}$$
 Luego, los puntos donde la tangente es horizontal corresponden a
-$$y'= 0 \ra \dfrac{-xy}{x^2y + e^{2y}} = 0 \ra -xy = 0 \ra x = 0 \vee y = 0$$
+$$y'= 0 \ra \dfrac{-2xy^2}{2x^2y + 3e^{2y}} = 0 \ra -2xy^2 = 0 \ra x = 0 \vee y = 0$$
 Sin embargo, notemos que al reemplazar $y=0$ en la ecuación de la curva, obtenemos
 $$1 = e$$
 Por lo que no existe ningún punto en la curva donde $y=0$.\\
@@ -639,7 +639,7 @@ Notemos que al evaluar, este límite es de la forma $\dfrac{0}{0}$, por lo que p
 Notemos que al evaluar este último, seguimos obteniendo $\dfrac{0}{0}$, por lo que debemos aplicar L'Hopital nuevamente,
 {\scriptsize$$\lim\limits_{x\ra 0}\dfrac{2(\arcsin x)}{3\ \sqrt[]{1-x^2}\sin(3x)}
 \stackrel{L'H}{=} \lim\limits_{x\ra 0}\dfrac{(2(\arcsin x))'}{(3\ \sqrt[]{1-x^2}\sin(3x))'}
-=\lim\limits_{x\ra 0}\dfrac{\dfrac{2}{\sqrt[]{1-x^2}}}{3\dfrac{1}{2\ \sqrt[]{1-x^2}}\cdot(-2x)\sin(3x) + 3\ \sqrt[]{1-x^2}\cos(3x)} $$}\\
+=\lim\limits_{x\ra 0}\dfrac{\dfrac{2}{\sqrt[]{1-x^2}}}{3\dfrac{1}{2\ \sqrt[]{1-x^2}}\cdot(-2x)\sin(3x) + 3\ \sqrt[]{1-x^2}\cos(3x)3} $$}\\
 Evaluando esto, tenemos que
 $$\lim\limits_{x\ra 0}\dfrac{(\arcsin x)^2}{1-cos(3x)} = \dfrac{2}{9}$$
 \item $\lim\limits_{x\ra 0} x^{\frac{1}{\ln (e^x-1)}}$\\
