--- a/2019/1/MAT1610/8/enunciado.tex
+++ b/2019/1/MAT1610/8/enunciado.tex
@@ -125,6 +125,6 @@ en el intervalo $[0, 2\pi]$.
 $$PV = nRT$$
 donde $n$ es constante y corresponde al número de moles del gas y $R = 0,0821$ es la constante de los gases.\\
 Suponga que en el instante $t_0$ la presión $P$ es igual a 8 $atm$ y que esta aumenta a razón de 0,1 $atm/min$. Además se sabe que en ese mismo instante el volumen $V$ es de 10 litros y que este disminuye a razón de 0,15 $lt/min$.\\
-Determine la razón de cambio de $T$, con respecto al tiempoo, en el instante $t_0$, sabiendo que la constante $n = 10\ mol$.
+Determine la razón de cambio de $T$, con respecto al tiempo, en el instante $t_0$, sabiendo que la constante $n = 10\ mol$.
 \end{preguntas}
 \end{document}
