Enunciado de 2019/1/MAT1203/8

--- a/2019/1/MAT1203/8/enunciado.tex
+++ b/2019/1/MAT1203/8/enunciado.tex
@@ -113,5 +113,21 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcular el determinante de siguiente matriz de $n\times n$
+	$$ \begin{bmatrix}
+	-3 & x & x & \dots & x \\
+	x & -3 & x & \dots & x \\
+	x & x & -3 & \dots & x \\
+	\vdots & \vdots & \vdots & \ddots & \vdots \\
+	x & x & x & \dots & -3
+	\end{bmatrix}$$
+\item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
+\begin{enumerate}[a)]
+\item El subconjunto de $\R^2$
+		$$E=\{(x_1, x_2) \in \R^2:9x_1^2+2x_2^2 \leq 4\}$$
+		es un subespacio vectorial de $\R^2$.
+\item Si $A$ es una matriz de $n \times n$ tal que $A^2=A$, entonces $Col(A) \cap Nul(A) = \{0\}$.
+\item Si $n$ es impar y $A$ es una matriz de $n\times n$ que satisface $A^T = -A$ entonces $Nul(A) \neq \{0\}$.
+\end{enumerate}
 \end{preguntas}
 \end{document}
