Enunciado de 2019/1/MAT1203/8

--- a/2019/1/MAT1203/8/enunciado.tex
+++ b/2019/1/MAT1203/8/enunciado.tex
@@ -121,6 +121,17 @@
 	\vdots & \vdots & \vdots & \ddots & \vdots \\
 	x & x & x & \dots & -3
 	\end{bmatrix}$$
+\item La matriz $A = \begin{bmatrix}
+	1 & 3 & 4 & -1 & 2\\
+	2 & 6 & 6 & 0 & -3\\
+	3 & 9 & 3 & 6 & -3\\
+	3 & 9 & 0 & 9 & 0
+	\end{bmatrix}$ es equivalente por filas a $B = \begin{bmatrix}
+	1 & 3 & 4 & -1 & 2\\
+	0 & 0 & 1 & -1 & 1\\
+	0 & 0 & 0 & 0 & -8\\
+	0 & 0 & 0 & 0 & 0
+	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
