--- a/2019/1/MAT1203/8/enunciado.tex
+++ b/2019/1/MAT1203/8/enunciado.tex
@@ -113,14 +113,17 @@
 \end{center}
 
 \begin{preguntas}
-\item Calcular el determinante de siguiente matriz de $n\times n$
-	$$ \begin{bmatrix}
-	-3 & x & x & \dots & x \\
-	x & -3 & x & \dots & x \\
-	x & x & -3 & \dots & x \\
-	\vdots & \vdots & \vdots & \ddots & \vdots \\
-	x & x & x & \dots & -3
-	\end{bmatrix}$$
+\item Sea $A$ un matriz tal que
+$$A^3 = 
+\begin{bmatrix}
+2 & 0 & 2\\
+-1 & 1 & 2\\
+2 & -1 & -1
+\end{bmatrix}$$
+\begin{enumerate}[a)]
+\item Calcule el determinante de la matriz $A^3$ mediante desarrollo por cofactores.
+\item Demuestre que $A$ no es invertible.
+\end{enumerate}
 \item La matriz $A = \begin{bmatrix}
 	1 & 3 & 4 & -1 & 2\\
 	2 & 6 & 6 & 0 & -3\\
@@ -132,6 +135,14 @@
 	0 & 0 & 0 & 0 & -8\\
 	0 & 0 & 0 & 0 & 0
 	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
+\item Calcular el determinante de siguiente matriz de $n\times n$
+	$$ \begin{bmatrix}
+	-3 & x & x & \dots & x \\
+	x & -3 & x & \dots & x \\
+	x & x & -3 & \dots & x \\
+	\vdots & \vdots & \vdots & \ddots & \vdots \\
+	x & x & x & \dots & -3
+	\end{bmatrix}$$
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
