--- a/2019/1/MAT1203/8/enunciado.tex
+++ b/2019/1/MAT1203/8/enunciado.tex
@@ -124,6 +124,14 @@ $$A^3 =
 \item Calcule el determinante de la matriz $A^3$ mediante desarrollo por cofactores.
 \item Demuestre que $A$ no es invertible.
 \end{enumerate}
+\item Calcular el determinante de siguiente matriz de $n\times n$
+	$$ \begin{bmatrix}
+	-3 & x & x & \dots & x \\
+	x & -3 & x & \dots & x \\
+	x & x & -3 & \dots & x \\
+	\vdots & \vdots & \vdots & \ddots & \vdots \\
+	x & x & x & \dots & -3
+	\end{bmatrix}$$
 \item La matriz $A = \begin{bmatrix}
 	1 & 3 & 4 & -1 & 2\\
 	2 & 6 & 6 & 0 & -3\\
@@ -135,14 +143,8 @@ $$A^3 =
 	0 & 0 & 0 & 0 & -8\\
 	0 & 0 & 0 & 0 & 0
 	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
-\item Calcular el determinante de siguiente matriz de $n\times n$
-	$$ \begin{bmatrix}
-	-3 & x & x & \dots & x \\
-	x & -3 & x & \dots & x \\
-	x & x & -3 & \dots & x \\
-	\vdots & \vdots & \vdots & \ddots & \vdots \\
-	x & x & x & \dots & -3
-	\end{bmatrix}$$
+\item Sea $A$ una matriz de $n \times n$ tal que existe una matriz $B \neq 0$ tal que $AB = 0$.\\
+Demuestre que $A$ no es invertible.
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
