--- a/2019/1/MAT1203/8/solucion.tex
+++ b/2019/1/MAT1203/8/solucion.tex
@@ -131,27 +131,6 @@ $$A^3 =
 \item 
 \end{enumerate}
 \end{solucion}
-\item La matriz $A = \begin{bmatrix}
-	1 & 3 & 4 & -1 & 2\\
-	2 & 6 & 6 & 0 & -3\\
-	3 & 9 & 3 & 6 & -3\\
-	3 & 9 & 0 & 9 & 0
-	\end{bmatrix}$ es equivalente por filas a $B = \begin{bmatrix}
-	1 & 3 & 4 & -1 & 2\\
-	0 & 0 & 1 & -1 & 1\\
-	0 & 0 & 0 & 0 & -8\\
-	0 & 0 & 0 & 0 & 0
-	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
-\begin{solucion}
-$B$ tiene 2 filas $L.D.$, es decir, 2 variables libres, por lo que $A$ también. Por esto,
-		$$dim(Nul\ A) = 2$$
-		Como $B$ tiene 3 pivotes, entonces $A$ también. Luego,
-		$$dim(Col\ A) = 3$$
-		Además, $B$ tiene 3 filas no nulas (pivotes), por lo que $A$ también. Estas filas serán el espacio fila de $A$ ($Fil\ A$), cuya dimensión es equivalente al espacio columna de $A^T$, por lo que
-		$$dim(Col\ A^T) = dim(Fil\ A) = 3$$
-		Por lo anterior, como $A^T$ tendrá 3 columnas pivotes, tendrá una variable libre, lo que implica
-		$$dim(Nul\ A^T) = 1$$
-\end{solucion}
 \item Calcular el determinante de siguiente matriz de $n\times n$
 	$$ \begin{bmatrix}
 	-3 & x & x & \dots & x \\
@@ -203,6 +182,32 @@ Calulemos el determinante de la matriz, esto es
 		\end{bmatrix}\right|$$
 		Aqui ya podemos multiplicar la diagonal de esta matriz, con lo que el determinante nos queda
 		$$det = (-3 + x(n-1)) \cdot (-3-x)^{n-1} = (-3-x)^n + xn(-3-x)^{n-1}$$
+\end{solucion}
+\item La matriz $A = \begin{bmatrix}
+	1 & 3 & 4 & -1 & 2\\
+	2 & 6 & 6 & 0 & -3\\
+	3 & 9 & 3 & 6 & -3\\
+	3 & 9 & 0 & 9 & 0
+	\end{bmatrix}$ es equivalente por filas a $B = \begin{bmatrix}
+	1 & 3 & 4 & -1 & 2\\
+	0 & 0 & 1 & -1 & 1\\
+	0 & 0 & 0 & 0 & -8\\
+	0 & 0 & 0 & 0 & 0
+	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
+\begin{solucion}
+$B$ tiene 2 filas $L.D.$, es decir, 2 variables libres, por lo que $A$ también. Por esto,
+		$$dim(Nul\ A) = 2$$
+		Como $B$ tiene 3 pivotes, entonces $A$ también. Luego,
+		$$dim(Col\ A) = 3$$
+		Además, $B$ tiene 3 filas no nulas (pivotes), por lo que $A$ también. Estas filas serán el espacio fila de $A$ ($Fil\ A$), cuya dimensión es equivalente al espacio columna de $A^T$, por lo que
+		$$dim(Col\ A^T) = dim(Fil\ A) = 3$$
+		Por lo anterior, como $A^T$ tendrá 3 columnas pivotes, tendrá una variable libre, lo que implica
+		$$dim(Nul\ A^T) = 1$$
+\end{solucion}
+\item Sea $A$ una matriz de $n \times n$ tal que existe una matriz $B \neq 0$ tal que $AB = 0$.\\
+Demuestre que $A$ no es invertible.
+\begin{solucion}
+Como por lo menos alguna de las columnas de $B$ es $b_i \neq \vec{0}$, la ecuación $Ax = 0$ posee una solución no trivial $x = b_i$, por lo que no puede ser invertible, ya que sus columnas son $LD$
 \end{solucion}
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
