--- a/2019/1/MAT1203/8/solucion.tex
+++ b/2019/1/MAT1203/8/solucion.tex
@@ -209,6 +209,12 @@ Demuestre que $A$ no es invertible.
 \begin{solucion}
 Como por lo menos alguna de las columnas de $B$ es $b_i \neq \vec{0}$, la ecuación $Ax = 0$ posee una solución no trivial $x = b_i$, por lo que no puede ser invertible, ya que sus columnas son $LD$
 \end{solucion}
+\item Sea $V = \mathbb{P}_3$ y sea
+$$W = \{p(x) \in V: p(1) = p(0) =0\}$$
+Demostrar que $W$ es subespacio de $V$.
+\begin{solucion}
+
+\end{solucion}
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
