Enunciado de 2019/1/MAT1203/8

--- a/2019/1/MAT1203/8/enunciado.tex
+++ b/2019/1/MAT1203/8/enunciado.tex
@@ -145,6 +145,8 @@ $$A^3 =
 	\end{bmatrix}$. Sin calcular bases, determine las dimensiones de Nul $A$, Col $A$, Col $A^T$ y Nul $A^T$.
 \item Sea $A$ una matriz de $n \times n$ tal que existe una matriz $B \neq 0$ tal que $AB = 0$.\\
 Demuestre que $A$ no es invertible.
+\item Sea $A$ una matriz de $5 \times 3$ tal que existe una matriz $C$ de $3 \times 5$ tal que $CA = I_3$ y sea $b \in R^5$ tal que la ecuación $Ax = b$ tiene solución.\\
+Demuestra que $A$ es invertible.
 \item Sea $V = \mathbb{P}_3$ y sea
 $$W = \{p(x) \in V: p(1) = p(0) =0\}$$
 Demostrar que $W$ es subespacio de $V$.
