Solución de 2019/1/MAT1203/8

--- a/2019/1/MAT1203/8/solucion.tex
+++ b/2019/1/MAT1203/8/solucion.tex
@@ -209,6 +209,11 @@ Demuestre que $A$ no es invertible.
 \begin{solucion}
 Como por lo menos alguna de las columnas de $B$ es $b_i \neq \vec{0}$, la ecuación $Ax = 0$ posee una solución no trivial $x = b_i$, por lo que no puede ser invertible, ya que sus columnas son $LD$
 \end{solucion}
+\item Sea $A$ una matriz de $5 \times 3$ tal que existe una matriz $C$ de $3 \times 5$ tal que $CA = I_3$ y sea $b \in R^5$ tal que la ecuación $Ax = b$ tiene solución.\\
+Demuestra que $A$ es invertible.
+\begin{solucion}
+
+\end{solucion}
 \item Sea $V = \mathbb{P}_3$ y sea
 $$W = \{p(x) \in V: p(1) = p(0) =0\}$$
 Demostrar que $W$ es subespacio de $V$.
