--- a/2019/1/MAT1203/8/solucion.tex
+++ b/2019/1/MAT1203/8/solucion.tex
@@ -220,6 +220,10 @@ Demostrar que $W$ es subespacio de $V$.
 \begin{solucion}
 
 \end{solucion}
+\item 
+\begin{solucion}
+
+\end{solucion}
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
