--- a/2019/1/MAT1203/8/enunciado.tex
+++ b/2019/1/MAT1203/8/enunciado.tex
@@ -150,7 +150,8 @@ Demuestra que $A$ es invertible.
 \item Sea $V = \mathbb{P}_3$ y sea
 $$W = \{p(x) \in V: p(1) = p(0) =0\}$$
 Demostrar que $W$ es subespacio de $V$.
-\item 
+
+\newpage
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
