Solución de 2019/1/MAT1203/8

--- a/2019/1/MAT1203/8/solucion.tex
+++ b/2019/1/MAT1203/8/solucion.tex
@@ -215,10 +215,7 @@ Demostrar que $W$ es subespacio de $V$.
 \begin{solucion}
 
 \end{solucion}
-\item 
-\begin{solucion}
-
-\end{solucion}
+\newpage
 \item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
 \begin{enumerate}[a)]
 \item El subconjunto de $\R^2$
