Enunciado de 2019/1/MAT1203/8.5

--- a/2019/1/MAT1203/8.5/enunciado.tex
+++ b/2019/1/MAT1203/8.5/enunciado.tex
@@ -113,6 +113,13 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
 \item Sea $A$ una matriz de $n \times n$ tal que existe una matriz $B \neq 0$ tal que $AB = 0$.\\
 Demuestre que $A$ no es invertible.
 \item Encuentre una factorziación $A = LU$ de
