--- a/2019/1/MAT1610/9/enunciado.tex
+++ b/2019/1/MAT1610/9/enunciado.tex
@@ -113,5 +113,6 @@
 \end{center}
 
 \begin{preguntas}
+\item Considere un trozo de alambre de 10 metros, el cual se corta en dos pedazos. Uno se dobla para formar un cuadrado y el otro se dobla para formar un triángulo equilátero. ¿Cómo debe cortarse el alambre de modo que el área total encerrada sea máxima?
 \end{preguntas}
 \end{document}
