Solución de 2019/1/MAT1610/9

--- a/2019/1/MAT1610/9/solucion.tex
+++ b/2019/1/MAT1610/9/solucion.tex
@@ -113,5 +113,9 @@
 \end{center}
 
 \begin{preguntas}
+\item Considere un trozo de alambre de 10 metros, el cual se corta en dos pedazos. Uno se dobla para formar un cuadrado y el otro se dobla para formar un triángulo equilátero. ¿Cómo debe cortarse el alambre de modo que el área total encerrada sea máxima?
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
