Solución de 2019/1/MAT1610/9

--- a/2019/1/MAT1610/9/solucion.tex
+++ b/2019/1/MAT1610/9/solucion.tex
@@ -121,5 +121,21 @@
 \begin{solucion}
 
 \end{solucion}
+\item Encuentra una antiderivada para cada una de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x) = 4x^3$
+\task $f(x) = 8x\sin (2x^2)$
+\task $f(x) = x^2 + \dfrac{3}{2x} + \dfrac{1}{1+4x^2}$
+\task $f(x) = e^{3x} + x\ln(x^2)$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
