Enunciado de 2019/1/MAT1610/9

--- a/2019/1/MAT1610/9/enunciado.tex
+++ b/2019/1/MAT1610/9/enunciado.tex
@@ -114,7 +114,7 @@
 
 \begin{preguntas}
 \item Considere un trozo de alambre de 10 metros, el cual se corta en dos pedazos. Uno se dobla para formar un cuadrado y el otro se dobla para formar un triángulo equilátero. ¿Cómo debe cortarse el alambre de modo que el área total encerrada sea máxima?
-\item Determine el punto de la parábola $y = 1 − x^2$ que está ubicado en el primer cuadrante, de modo que la tangente en dicho punto, forme un triángulo de área mínima con los ejes coordenados.
+\item Determine el punto de la parábola $y = 1 - x^2$ que está ubicado en el primer cuadrante, de modo que la tangente en dicho punto, forme un triángulo de área mínima con los ejes coordenados.
 \item Encuentra una antiderivada para cada una de las siguientes funciones
 \begin{tasks}(2)
 \task $f(x) = 4x^3$
