--- a/2019/1/MAT1610/9/solucion.tex
+++ b/2019/1/MAT1610/9/solucion.tex
@@ -117,7 +117,7 @@
 \begin{solucion}
 
 \end{solucion}
-\item Determine el punto de la parábola $y = 1 − x^2$ que está ubicado en el primer cuadrante, de modo que la tangente en dicho punto, forme un triángulo de área mínima con los ejes coordenados.
+\item Determine el punto de la parábola $y = 1 - x^2$ que está ubicado en el primer cuadrante, de modo que la tangente en dicho punto, forme un triángulo de área mínima con los ejes coordenados.
 \begin{solucion}
 
 \end{solucion}
