Enunciado de 2019/1/MAT1610/9

--- a/2019/1/MAT1610/9/enunciado.tex
+++ b/2019/1/MAT1610/9/enunciado.tex
@@ -119,8 +119,8 @@
 \begin{tasks}(2)
 \task $f(x) = 4x^3$
 \task $f(x) = 8x\sin (2x^2)$
-\task $f(x) = x^2 + \dfrac{3}{2x} + \dfrac{1}{1+4x^2}$
-\task $f(x) = e^{3x} + x\ln(x^2)$
+\task $f(x) = \dfrac{3}{2x}$
+\task $f(x) = \dfrac{1}{1+4x^2}$
 \end{tasks}
 \end{preguntas}
 \end{document}
