--- a/2018/1/MAT1203/9/solucion.tex
+++ b/2018/1/MAT1203/9/solucion.tex
@@ -113,5 +113,172 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea 
+	$$U=\{p(x) \in \mathbb{P}_2 : p(1) + p(0) = p(-1)\}$$
+	Determinar una base de $U$.
+\begin{solucion}
+			Sea $p(x) \in \mathbb{P}_2$ un polinomio de la forma $p(x) = a + bx + cx^2$\\
+			\\
+			Para que pertenezca a $U$, debe cumplirse que
+			$$p(1) + p(0) = p(-1)$$
+			$$a+b+c+a=a-b+c$$
+			$$a = -2b$$
+			Luego,
+			$$\begin{array}{rcl}
+			a & = & -2b\\
+			b & = & b\\
+			c & = & c
+			\end{array}$$
+			Entonces, podemos reescribir el polinomio como
+			$$p(x) = -2b + bc + cx^2$$
+			$$p(x) = b(x-2) + c(x^2)$$
+			Finalmente,
+			$$U = Gen\{x-2, x^2\}$$
+\end{solucion}
+\item Use vectores de coordenadas para probar la independencia lineal del conjunto de polinomios $\{1-2t^2-t^3,t+2t^3,1+t-2t^2\}$.
+\begin{solucion}
+La base que utilizaremos será
+		$$B = \{1,t,t^2,t^3\}$$
+		Luego, podemos reescribir cada elemento del conjunto de la siguiente forma
+		$$\begin{array}{lcl}
+		1-2t-t^3 & \ra & (1,\ \ 0,-2,-1)\\
+		t+2t^3 & \ra & (0,\ \ 1,\ \ 0,\ \ 2)\\
+		1+t-2t^3 & \ra & (1,\ \ 1,-2,\ \ 0)
+		\end{array}$$
+		Ahora, para probar que los elementos del conjunto son $L.I.$, basta con probar que los vectores de coordenadas lo son. Para esto, ponemos los vectores en una matriz y pivoteamos:
+		$$\begin{bmatrix}
+		1 & 0 & 1\\
+		0 & 1 & 1\\
+		-2 & 0 & -2\\
+		-1 & 2 & 0
+		\end{bmatrix} \sim
+		\begin{bmatrix}
+		1 & 0 & 1\\
+		0 & 1 & 1\\
+		0 & 0 & 1\\
+		0 & 0 & 0
+		\end{bmatrix}$$
+		Con lo que concluimos que son $L.I.$
+		$$\blacksquare$$
+\end{solucion}
+\item Sean $p_1(t) = 1-t^2, p_2(t) = 1+t, p_3(t) = 1+t+t^2$. Se sabe que $\{p_1(t), p_2(t), p_3(t)\}$ es una base de $\mathbb{P}_2$.
+\begin{enumerate}[a)]
+\item Exprese los polinomios $f(t) = 3-5t + 2t^2$ y $g(t) = 1-3t$ como combinaciones lineales de $\{p_1(t), p_2(t), p_3(t)\}$.
+\item Use los vectores de coordenadas encontrados en la parte anterior para determinar si el conjunto $\{p_1(t), f(t), g(t)\}$ es L.I. o L.D.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Exprese los polinomios $f(t) = 3-5t + 2t^2$ y $g(t) = 1-3t$ como combinaciones lineales de $\{p_1(t), p_2(t), p_3(t)\}$.\\
+			\\
+			Sea una base 
+			$$B = \{p_1(t), p_2(t), p_3(t)\} = $$, lo que estamos buscando son las coordenadas de $f$ y $g$ en la base $B$.\\
+			\\
+			En primer lugar, veamos $f(t)$. Debemos buscar $a$, $b$, $c$, tal que
+			$$f(t) = 3-5t + 2t^2 = ap_1(t) + bp_2(t) + cp_3(t)$$
+			Reemplazando y reagrupando,
+			$$3-5t + 2t^2 = a(1-t^2) + b(1+t) + c(1+t+t^2)$$
+			$$3-5t + 2t^2 = (a+b+c) + (b+c)t + (c-a)t^2$$
+			Por lo que
+			$$\begin{array}{rl}
+			a + b +c & = 3\\
+			b + c & =-5\\
+			-a+c & =2
+			\end{array} \Longrightarrow
+			\begin{array}{rl}
+			a & = 8\\
+			b & =-15\\
+			c & = 10
+			\end{array}$$
+			Luego, las coordenadas de $f(t)$ en $B$ son $(8,-15,10)$.\\
+			\\
+			Veamos ahora que ocurre con $g(t)$. Nuevamente, buscamos $a$, $b$, $c$, tal que
+			$$g(t) = 1-3t =  ap_1(t) + bp_2(t) + cp_3(t)$$
+			Esto es,
+			$$1-3t = a(1-t^2) + b(1+t) + c(1+t+t^2)$$
+			$$1-3t = (a+b+c) + (b+c)t + (c-a)t^2$$
+			Lo que se nos lleva al sistema
+			$$\begin{array}{rl}
+			a + b +c & = 1\\
+			b + c & =-3\\
+			-a+c & =0
+			\end{array} \Longrightarrow
+			\begin{array}{rl}
+			a & = 4\\
+			b & =-7\\
+			c & = 4
+			\end{array}$$
+			Con lo que las coordenadas de $g(t)$ en $B$ son $(4,-7,4)$.
+\item Use los vectores de coordenadas encontrados en la parte anterior para determinar si el conjunto $\{p_1(t), f(t), g(t)\}$ es L.I. o L.D.\\
+			\\
+			Para determinar esto, podemos usar las coordenadas de estos elementos en cualquier base. Por conveniencia, usaremos la base $B$. Aquí, los vectores de coordenadas son
+			$$p_1(t) = (1,0,0)$$
+			$$f(t) = (8,-15,10)$$
+			$$g(t) = (4,-7,4)$$
+			Armamos una matriz con ellos y pivoteamos,
+			$$\begin{bmatrix}
+			1 & 0 & 0 \\
+			8 & -15 & 10 \\
+			4 & -7 & 4
+			\end{bmatrix}
+			\sim
+			\begin{bmatrix}
+			1 & 0 & 0 \\
+			0 & 1 & 0 \\
+			0 & 0 & 1
+			\end{bmatrix}$$
+			Por lo que sus el conjunto $\{p_1(t), f(t), g(t)\}$ es $L.I.$
+\end{enumerate}
+\end{solucion}
+\item Sea $A$ una matriz tal que $dim(Nul(A)) = 3$ y
+	$$A^T \begin{pmatrix}
+	1 \\ -2 \\ 1 \\ 1
+	\end{pmatrix} = \begin{pmatrix}
+	0 \\ 0 \\ 0 \\ 0 \\ 0
+	\end{pmatrix}, \quad A^T \begin{pmatrix}
+	2 \\ -1 \\ -1 \\ 1
+	\end{pmatrix} = \begin{pmatrix}
+	0 \\ 0 \\ 0 \\ 0 \\ 0
+	\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Determine las dimensiones de $Col(A)$, de $Fila(A)$ y de $Nul(A^T)$
+\item Determine, en los casos que sea posible, bases para los espacios $Nul(A^T)$ y $Fila(A)$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Determine las dimensiones de $Col(A)$, de $Fila(A)$ y de $Nul(A^T)$\\
+			\\
+			Antes de comenzar, recordemos que para una matriz $A_{n\times m}$, se tiene que
+			$$dim(Nul(A)) + dim(Col(A)) = m$$
+			$$dim(Nul(A^T)) + dim(Col(A^T)) = n$$
+			$$dim(Col(A)) = dim(Col(A^T))$$
+			Para este ejercicio en particular, sabemos que $dim(Nul(A)) = 3$ y que la matriz $A$ tiene 4 filas y 5 columnas. Luego, usando la primera propiedad,
+			$$dim(Nul(A)) + dim(Col(A)) = 5$$
+			$$3 + dim(Col(A)) = 5$$
+			$$dim(Col(A)) = 2$$
+			Notemos también que la cantidad de pivotes será la misma en las filas que en las columnas, por lo que
+			$$dim(Fila(A)) = dim(Col(A)) = 2$$
+			Ahora, usando la segunda propiedad, tenemos que
+			$$dim(Nul(A^T)) + dim(Col(A^T)) = 4$$
+			Pero por la tercera propiedad sabemos que 
+			$$dim(Col(A^T)) = dim(Col(A)) = 2$$
+			Por lo que
+			$$dim(Nul(A^T)) + 2 = 4$$
+			$$dim(Nul(A^T)) = 2$$
+			Finalmente,
+			$$dim(Col(A))=2,\quad dim(Fila(A))=2, \quad dim(Nul(A^T))=2$$
+\item Determine, en los casos que sea posible, bases para los espacios $Nul(A^T)$ y $Fila(A)$.\\
+			\\
+			Sabemos que $dim(Nul(A^T))=0$ y del enunciado tenemos dos vectores $L.I.$ que son pertenecen al $Nul(A^T)$, por lo que una base de $Nul(A^T)$ es
+			$$\left\{ \begin{pmatrix}
+			1 \\ -2 \\ 1 \\ 1
+			\end{pmatrix},
+			\begin{pmatrix}
+			2 \\ -1 \\ -1 \\ 1
+			\end{pmatrix}\right\}$$
+			Por el otro lado, no podemos determinar una base para $Fila(A)$, ya que solo conocemos su dimensión pero no vectores que puedan generarlo.
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
