--- a/2019/1/MAT1203/9/enunciado.tex
+++ b/2019/1/MAT1203/9/enunciado.tex
@@ -113,5 +113,28 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea 
+	$$U=\{p(x) \in \mathbb{P}_2 : p(1) + p(0) = p(-1)\}$$
+	Determinar una base de $U$.
+\item Use vectores de coordenadas para probar la independencia lineal del conjunto de polinomios $\{1-2t^2-t^3,t+2t^3,1+t-2t^2\}$.
+\item Sean $p_1(t) = 1-t^2, p_2(t) = 1+t, p_3(t) = 1+t+t^2$. Se sabe que $\{p_1(t), p_2(t), p_3(t)\}$ es una base de $\mathbb{P}_2$.
+\begin{enumerate}[a)]
+\item Exprese los polinomios $f(t) = 3-5t + 2t^2$ y $g(t) = 1-3t$ como combinaciones lineales de $\{p_1(t), p_2(t), p_3(t)\}$.
+\item Use los vectores de coordenadas encontrados en la parte anterior para determinar si el conjunto $\{p_1(t), f(t), g(t)\}$ es L.I. o L.D.
+\end{enumerate}
+\item Sea $A$ una matriz tal que $dim(Nul(A)) = 3$ y
+	$$A^T \begin{pmatrix}
+	1 \\ -2 \\ 1 \\ 1
+	\end{pmatrix} = \begin{pmatrix}
+	0 \\ 0 \\ 0 \\ 0 \\ 0
+	\end{pmatrix}, \quad A^T \begin{pmatrix}
+	2 \\ -1 \\ -1 \\ 1
+	\end{pmatrix} = \begin{pmatrix}
+	0 \\ 0 \\ 0 \\ 0 \\ 0
+	\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Determine las dimensiones de $Col(A)$, de $Fila(A)$ y de $Nul(A^T)$
+\item Determine, en los casos que sea posible, bases para los espacios $Nul(A^T)$ y $Fila(A)$.
+\end{enumerate}
 \end{preguntas}
 \end{document}
