Enunciado de 2019/1/MAT1203/9

--- a/2019/1/MAT1203/9/enunciado.tex
+++ b/2019/1/MAT1203/9/enunciado.tex
@@ -122,19 +122,11 @@
 \item Exprese los polinomios $f(t) = 3-5t + 2t^2$ y $g(t) = 1-3t$ como combinaciones lineales de $\{p_1(t), p_2(t), p_3(t)\}$.
 \item Use los vectores de coordenadas encontrados en la parte anterior para determinar si el conjunto $\{p_1(t), f(t), g(t)\}$ es L.I. o L.D.
 \end{enumerate}
-\item Sea $A$ una matriz tal que $dim(Nul(A)) = 3$ y
-	$$A^T \begin{pmatrix}
-	1 \\ -2 \\ 1 \\ 1
-	\end{pmatrix} = \begin{pmatrix}
-	0 \\ 0 \\ 0 \\ 0 \\ 0
-	\end{pmatrix}, \quad A^T \begin{pmatrix}
-	2 \\ -1 \\ -1 \\ 1
-	\end{pmatrix} = \begin{pmatrix}
-	0 \\ 0 \\ 0 \\ 0 \\ 0
-	\end{pmatrix}$$
-\begin{enumerate}[a)]
-\item Determine las dimensiones de $Col(A)$, de $Fila(A)$ y de $Nul(A^T)$
-\item Determine, en los casos que sea posible, bases para los espacios $Nul(A^T)$ y $Fila(A)$.
-\end{enumerate}
+\item Sea
+$$T\left(\left[ \begin{array}{c}
+a\\ b\\ c \end{array} \right] \right) = (a+b+c) + (a-b+2c)x +
+(3b-c)x^2
+$$
+Determine una base para $Nul(T) $ y para $Im (T) $ y las dimensiones de estos subespacios.
 \end{preguntas}
 \end{document}
